multi sensor is done